Code and feature file Refactoring