@@ -312,7 +312,7 @@
             </build>
         </profile>
         <profile>
-            <id>API</id>
+            <id>SEARCHAPI</id>
             <build>
                 <plugins>
                     <plugin>
@@ -320,7 +320,29 @@
                         <version>${maven.failsafe-plugin.version}</version>
                         <configuration>
                             <includes>
-                                <include>UK/GOV/BEIS/SCTDB/runners/api/*APIRunner.java</include>
+                                <include>UK/GOV/BEIS/SCTDB/runners/api/search/*APIRunner.java</include>
+                            </includes>
+                            <trimStackTrace>false</trimStackTrace>
+                            <!--<reuseForks>true</reuseForks>
+                            <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                            <systemPropertyVariables>
+                                <environment>restservicerunner</environment>
+                            </systemPropertyVariables>-->
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>ADMINAPI</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-failsafe-plugin</artifactId>
+                        <version>${maven.failsafe-plugin.version}</version>
+                        <configuration>
+                            <includes>
+                                <include>UK/GOV/BEIS/SCTDB/runners/api/admin/*APIRunner.java</include>
                             </includes>
                             <trimStackTrace>false</trimStackTrace>
                             <!--<reuseForks>true</reuseForks>
